[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "csv-cleaner"
version = "1.0.0"
description = "OpenEnv environment for AI-powered CSV data cleaning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.100.0,<0.112.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
inference = [
    "openai>=1.30.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
